# acp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
acp/: __init__.py  cli.py  dashboard.html  db.py  models.py  scanner.py  server.py
docs/: MEMO.md  architecture.html
sql/: 001_schema.sql
