[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp"
version = "0.1.0"
description = "Agent Control Plane — AI Production Governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Maki Chiba" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.9",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
acpctl = "acp.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
